# Build-Scripts

./: README-Darwin.md  README-Solaris.md  README.md  audit-checksec-bins.sh  audit-checksec-libs.sh  audit-rpath-bins.sh  audit-rpath-libs.sh  build-acl.sh  build-apg.sh  build-attr.sh  build-autoconf.sh  build-autogen.sh  build-automake.sh  build-autotools.sh  build-b2sum.sh  build-base.sh  build-bash.sh  build-bayonne.sh  build-bc.sh  build-bdb.sh  build-bison-rc.sh  build-bison.sh  build-boehm-gc-7.2k.sh  build-boehm-gc.sh  build-botan.sh  build-bzip.sh  build-cacert.sh  build-cares.sh  build-clamav.sh  build-cmake-3.0.sh  build-cmake.sh  build-coreutils.sh  build-cpuid.sh  build-cryptlib.sh  build-cryptopp.sh  build-curl.sh  build-datefudge.sh  build-dejagnu.sh  build-diffutils.sh  build-dos2unix.sh  (+160 more)
bootstrap/: bitness.c  bootstrap-wget.sh  comptest.c  dnsroot.key  dnsrootkey.pem  openssl.patch  rootkey.pem
patch/: Makefile  Makefile-libbz2_dylib  Makefile-libbz2_so  acl.patch  apg.patch  attr.patch  b2sum  b2sum.patch  bash.patch  bc.patch  bzip.patch  cpuid.patch  cryptlib.patch  curl.patch  datefudge-solaris.patch  db.patch  ecgen.patch  emacs.patch  expat.patch  (+56 more)
patch-master/: .gitignore  Makefile.am  NEWS  README  README-alpha  README-hacking  bootstrap.conf  configure.ac
patch-master/tests/: Makefile.am  asymmetric-hunks  backup-prefix-suffix  bad-usage  concat-git-diff  context-format  copy-rename  corrupt-patch  corrupt-reject-files  create-delete  criss-cross  crlf-handling  dash-o-append  deep-directories  ed-style  empty-files  false-match  fifo  file-create-modes  file-modes  filename-choice  garbage  git-binary-diff  git-cleanup  global-reject-files  inname  line-numbers  mangled-numbers-abort  merge  mixed-patch-types  munged-context-format  need-filename  no-mode-change-git-diff  no-newline-triggers-assert  preserve-c-function-names  preserve-mode-and-timestamp  quoted-filenames  read-only-files  reject-format  remember-backup-files  (+5 more)
(+23 files in other folders)
